refactor: refactor all codebase for better readability